DERBY-2031: Convert derbynet/testProtocol.java to JUnit. First revision of the converted test. The test itself is complete, but some required changes in the policy file have not yet been committed. Patch file: derby-2031-2a-test.diff
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@670526 13f79535-47bb-0310-9956-ffa450edef68